--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for city in city_names:\n",
-    "    "
+    "    names_and_ranks[city] = \"c\""
    ]
   },
   {
