--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for city in city_names:\n",
+    "for city in range(0city_names:\n",
     "    names_and_ranks[city] = city+1+\". \"+city_names[city]"
    ]
   },
