--- a/index.ipynb
+++ b/index.ipynb
@@ -228,8 +228,8 @@
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for city in range(0,len(city_names)-1):\n",
-    "    names_and_ranks[city] = city"
+    "for index in city_indices:\n",
+    "    names_and_ranks[in] = city"
    ]
   },
   {
