--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
-    "    names_and_ranks[in] = city"
+    "    names_and_ranks[index] = f''"
    ]
   },
   {
