Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11. city_name[index]'"
+       "'11. Solta'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
