Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,19 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for index in city_indi:\n",
+    "for index in city_indices:\n",
     "    names_and_ranks.append(f'{index+1}. {city_names[index]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for index in city_indices:\n",
+    "    city_populations"
    ]
   },
   {
