Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
    "source": [
     "city_populations = []\n",
     "for index in city_indices:\n",
-    "    city_populations"
+    "    city_populations.append(cities[index]['Population'])"
    ]
   },
   {
